<resources>
    <string name="app_name">Record Mp3</string>
    <string name="settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_high_quality_key">pref_high_quality</string>
    <string name="pref_high_quality_title">Enable High Quality Recording</string>
    <string name="pref_high_quality_desc">Record in CD Quality</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>

    <!-- Licences -->
    <string name="linked_in_site">https://www.linkedin.com/in/tebandeke-abubakari-698928179/</string>
    <string name="tech_company">TABU TECHNOLOGIES</string>
    <string name="programmer_name">Tebandeke Abubakari</string>
    <string name="licence_title">All rights  Reserved © </string>
    <string name="licence_text">

        TABU TECHNOLOGIES LICENCE (TTL)

        \n\nCopyright © 2020 by Tebandeke Abubakari
        All rights reserved. This software or any portion thereof
        may not be reproduced or used in any manner whatsoever
        without the express written permission of the developer.


        \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>

    <!-- Toolbar -->
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>

    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>
    <string name="record_status">Tap button to start recording..</string>
    <string name="start_record_toast">Started recording mp3</string>
    <string name="recording_status_pro">Recording</string>
    <string name="color_changer">Change App Color</string>
    <string name="color_message">Click to view color options.</string>
    <string name="list_colors">list color</string>
    <string name="color_list_pref">Color List</string>
    <string name="prefe_about_header">About App and Developer</string>

    <string name="default_color">Orange</string>
    <string name="splash_text">Record Mp3</string>
    <string-array name="colors">
        <item>Orange</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Pink</item>
        <item>Red</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Watery Blue</item>

    </string-array>

</resources>